--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,32 @@ a:hover {
   text-decoration: none;
 }
 
+.pictures {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.picture1 {
+  width: 50%;
+  text-align: center;
+}
+
+.picture2 {
+  width: 50%;
+  text-align: center;
+}
+
+.picture3 {
+  width: 50%;
+  text-align: center;
+}
+
+.picture4 {
+  width: 50%;
+  text-align: center;
+}
+
 #landing {
   width: 100%;
   height: 100vh;
@@ -53,19 +79,10 @@ a:hover {
   top: 0;
   left: 0;
   right: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   padding: 0 15px;
 }
 
@@ -125,9 +142,7 @@ a:hover {
 
 .skills .progress-bar {
   height: 10px;
-  -webkit-transition: .9s;
   transition: .9s;
-  background: -webkit-gradient(linear, right top, left top, from(#89ffd8), to(greenyellow));
   background: linear-gradient(to left, #89ffd8, greenyellow);
 }
 
@@ -217,9 +232,7 @@ a:hover {
 
 .skills .progress-bar {
   height: 10px;
-  -webkit-transition: .9s;
   transition: .9s;
-  background: -webkit-gradient(linear, right top, left top, from(#89ffd8), to(greenyellow));
   background: linear-gradient(to left, #89ffd8, greenyellow);
 }
 /*# sourceMappingURL=style.css.map */
