--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,31 @@ a{
     }
 }
 
+.pictures{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.picture1{
+    width: 50%;
+    text-align: center;
+}
+
+.picture2{
+    width: 50%;
+    text-align: center;
+}
+
+.picture3{
+    width: 50%;
+    text-align: center;
+}
+
+.picture4{
+    width: 50%;
+    text-align: center;
+}
 #landing{
     width: 100%;
     height: 100vh;
